fix: spacing on neasted dropdown menu item

--- a/src/components/Dropdown/CustomDropdown/CustomDropdown.scss
+++ b/src/components/Dropdown/CustomDropdown/CustomDropdown.scss
@@ -7,7 +7,7 @@
 .moonstone-custom-dropdown-menu {
     padding: var(--spacing-small);
 
-    .moonstone-menuItem {
+    > .moonstone-menuItem {
         padding-top: 0;
         padding-right: 0;
         padding-left: 0;
